# DeepSDF

./: CMakeLists.txt  preprocess_data.py  train_deep_sdf.py
deep_sdf/: data.py
examples/sofas/: specs.json
src/: PreprocessMesh.cpp
